<?xml version="1.0"?>
<package format="2">
  <name>signal_logger_ros</name>
  <version>0.0.0</version>
  <description>The signal_logger_ros package</description>

  <url type="website">https://bitbucket.org/ethz-asl-lr/signal_logger</url>
  <maintainer email="gehrinch@ethz.ch">Christian Gehring</maintainer>
  <maintainer email="bellicoso@mavt.ethz.ch">Dario Bellicoso</maintainer>
  <author email="gabriel.hottiger@mavt.ethz.ch">Gabriel Hottiger</author>
  <author email="gehrinch@ethz.ch">Christian Gehring</author>
  <author email="bellicoso@mavt.ethz.ch">Dario Bellicoso</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_logger</depend>
  <depend>signal_logger_core</depend>
  <depend>signal_logger_std</depend>
  <depend>signal_logger_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kindr_msgs</depend>

</package>
