<?xml version="1.0"?>
<package format="2">
  <name>signal_logger_ros</name>
  <version>0.5.0</version>
  <description>The signal_logger_ros package</description>

  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <author email="cgehring@anybotics.com">Christian Gehring</author>
  <author email="bellicoso@mavt.ethz.ch">Dario Bellicoso</author>
  <license>BSD</license>
  <url>https://github.com/anybotics/signal_logger</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_logger</depend>
  <depend>signal_logger_core</depend>
  <depend>signal_logger_std</depend>
  <depend>signal_logger_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosbag</depend>
  <depend>kindr_msgs</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>

</package>
