<?xml version="1.0"?>
<package>
  <name>signal_logger_std</name>
  <version>0.0.0</version>
  <description>The signal_logger_std package</description>
  <maintainer email="gehrinch@ethz.ch">Christian Gehring</maintainer>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/ethz-asl-lr/signal_logger</url>
  <author email="gehrinch@ethz.ch">Christian Gehring</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>signal_logger</build_depend>
  <run_depend>signal_logger</run_depend>
</package>