<?xml version="1.0"?>
<package>
  <name>signal_logger_std</name>
  <version>0.0.0</version>
  <description>The signal_logger_std package</description>
  <maintainer email="gehrinch@ethz.ch">Christian Gehring</maintainer>
  <maintainer email="bellicoso@mavt.ethz.ch">Dario Bellicoso</maintainer>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/ethz-asl-lr/signal_logger</url>
  <author email="gehrinch@ethz.ch">Christian Gehring</author>
  <author email="bellicoso@mavt.ethz.ch">Dario Bellicoso</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>signal_logger</build_depend>
  <build_depend>roco</build_depend>
  <build_depend>kindr</build_depend>
  <run_depend>signal_logger</run_depend>
  <run_depend>roco</run_depend>
  <run_depend>kindr</run_depend>
</package>