<?xml version="1.0"?>
<package format="2">
  <name>signal_logger_ui</name>
  <version>0.1.0</version>
  <description>Python plotting interface for Signal Logger</description>
  <maintainer email="scaron@anybotics.com">Stéphane Caron</maintainer>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>
  <author email="pierre.gergondet@gmail.com">Pierre Gergondet</author>
  <license>BSD</license>
  <url>https://github.com/jrl-umi3218/mc_rtc/tree/master/utils/mc_log_gui</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python3-qtconsole</exec_depend>
  <exec_depend>jupyter-qtconsole</exec_depend>
  <exec_depend>python3-ipykernel</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pyside2.qtcore</exec_depend>
  <exec_depend>python3-pyside2.qtwidgets</exec_depend>
  <exec_depend>python3-pyside2.qtprintsupport</exec_depend>
  <exec_depend>python3-qtconsole</exec_depend>
  <exec_depend>signal_logger_python</exec_depend>

<!--   <test_depend>cmake_python_coverage</test_depend> -->
</package>
